update personal biblio

--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -220,7 +220,7 @@
 	year = "2018"
 }
 
-@article{COTOSARMIENTO2018117,
+@article{cotosarmiento2018identifyingsociallearningbetweenromanamphoraeworkshopsthroughmorphometricsimilarity,
 	author = "Coto-Sarmiento, Maria and Rubio-Campillo, Xavier and Remesal, Jos{\'e}",
 	doi = "10.1016/j.jas.2018.06.002",
 	issn = "0305-4403",
@@ -233,7 +233,7 @@
 	year = "2018"
 }
 
-@article{Hanson20170367,
+@article{hanson2017urbanismandthedivisionoflabourintheromanempire,
 	abstract = "One of the hallmarks of human agglomeration is an increase in the division of labour, but the exact nature of this relationship has been debated among anthropologists, sociologists, economists, and historians and archaeologists. Over the last decade, researchers investigating contemporary urban systems have suggested a novel explanation for the links between the numbers of inhabitants in settlements and many of their most important characteristics, which is grounded in a view of settlements as social networks embedded in built environments. One of the remarkable aspects of this approach is that it is not based on the specific conditions of the modern world (such as capitalism or industrialization), which raises the issue of whether the relationships observed in contemporary urban systems can also be detected in pre-modern urban or even non-urban systems. Here, we present a general model for the relationship between the population and functional diversity of settlements, where the latter is viewed as an indicator of the division of labour. We then explore the applicability of this model to pre-modern contexts, focusing on cities in the Roman Empire, using estimates of their numbers of inhabitants, numbers of documented professional associations, and numbers of recorded inscriptions to develop an index of functional diversity. Our results are consistent with theoretical expectations, adding further support to the view that urban systems in both contemporary and pre-modern contexts reflect a common set of generative processes.",
 	author = "Hanson, J. W. and Ortman, S. G. and Lobo, J.",
 	doi = "10.1098/rsif.2017.0367",
@@ -266,5 +266,15 @@
 	title = "{La science {\`a} contrepied}",
 	url = "https://books.google.es/books?id=YVImDwAAQBAJ",
 	year = "2017"
+}
+
+@inproceedings{cotosarmiento2018agentbasedmodeltodetectvariationsinthetransmissionofpottersfrombaeticaprovince,
+	author = "Coto-Sarmiento, Maria and Carrignon, Simon and Rubio-Campillo, Xavier and Remesal, Jos{\'e}",
+	booktitle = "{19th International Congress of Classical Archaeology}",
+	journal = "19th International Congress of Classical Archaeology",
+	location = "Cologne/Bonn",
+	month = "May",
+	title = "{Agent Based Model to detect variations in the transmission of potters from Baetica province}",
+	year = "2018"
 }
 
